# Graviton-App

./: .editorconfig  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .mocharc.json  .npmrc  .prettierrc.json  .travis.yml  BUILDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  ISSUE_TEMPLATE  ISSUE_TEMPLATE.md  LICENSE.md  Makefile.toml  PLUGINS.md  RELEASE_CHANGELOG.md  TODO.md  _time_spent.json  build.txt  config.json  gulpfile.js  index.html  jakefile.js  log.json  main.js  main.tsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preload.tsconfig.json  readme.md  rustfmt.toml  start  test.sh  tsconfig.json  webpack.config.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  suggestion.md
.github/workflows/: ci.yml  nodejs.yml  pull_requests.yml  release.yml
app/: main.ts  plugins_handler.ts
book/: book.toml  readme.md
book/src/: SUMMARY.md  building.md  core.md  extensions.md  introduction.md  state.md  transports.md
core/: Cargo.toml  readme.md
core/examples/: demo.rs  http.rs
core/src/: configuration.rs  lib.rs  server.rs  state.rs
core/src/filesystems/: local.rs  mod.rs
core/src/handlers/: http.rs  local.rs  mod.rs
core/src/transports/: http.rs  local.rs  mod.rs
core_api/: Cargo.toml  readme.md
core_api/src/: extensions_manager.rs  language_servers.rs  lib.rs  messaging.rs  state.rs  terminal_shells.rs
core_api/src/extensions/: base.rs  client.rs  manager.rs  manifest.rs  mod.rs  settings.rs
core_api/src/extensions/modules/: command.rs  mod.rs  popup.rs  statusbar_item.rs
core_api/src/filesystems/: local.rs  mod.rs
core_api/src/messaging/: client.rs  server.rs
core_api/src/state_persistors/: file.rs  memory.rs  mod.rs
core_api/src/states/: mod.rs  state.rs  states_list.rs
core_api/src/states/data/: commands.rs  mod.rs  views.rs
core_api/src/terminal_shells/: mod.rs
core_api/tests/: extension_settings.rs  manifests.rs  terminal_shells.rs
core_deno/: Cargo.toml  build.rs  readme.md
core_deno/src/: events_manager.rs  graviton.d.ts  graviton.js  graviton.ts  lib.rs  main_worker.rs  manifest.rs  worker_extension.rs
core_deno/src/exts/: events.rs  mod.rs  statusbar_items.rs
core_deno/tests/: bad_manifest.toml  events.rs  load_extensions.rs  ok_manifest.toml  sample_extension.js  statusbar_item_extension.js  statusbar_items.rs  test.rs
core_deno/tests/extensions/sample/: Graviton.toml  main.js
core_deno/tests/js/: statusbar_item_extension.js
core_deno/tests/js/extensions/sample/: Graviton.toml
crosspty/: Cargo.toml
crosspty/examples/: demo.rs  test.rs
crosspty/src/: lib.rs
crosspty/tests/: test.rs
desktop/: Cargo.toml  package.json  readme.md
desktop/src/: conf.json  main.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs  methods.rs
extensions/git/: Cargo.toml  readme.md
extensions/git/src/: lib.rs  messages.rs  types.rs
extensions/native-shell/: Cargo.toml
extensions/native-shell/src/: lib.rs  native.rs
extensions/typescript-lsp/: Cargo.toml  readme.md
extensions/typescript-lsp/src/: lib.rs  lsp.rs
iconpacks/Graviton/: package.json
languages/: arabic.json  brazilian_portuguese  brazilian_portuguese.json  catalan.json  chinese-simplified.json  classical_latin.json  default.json  english.json  esperanto.json  french.json  german.json  greek.json  hebrew.json  hungarian.json  indonesian.json  italian.json  package.json  polish.json  russian.json  spanish.json  turkish.json  ukranian.json
languages/src/: czech.json  english.json  french.json  german.json  indonesian.json  spanish.json
plugins/Carbonara/: main.js  package.json
plugins/Dreble/: main.js  package.json
plugins/GitTest/: git.js  package.json
plugins/PluginTest/: package.json  test.js
plugins/TimeFlow/: package.json  timeflow.css  timeflow.js
plugins/js-ts-langserver/: graviton.config.js  index.js  package-lock.json  package.json  readme.md  webpack.config.js
sample_extension/: Graviton.toml  main.js  readme.md
scripts/: build.js
server/: Cargo.toml
server/src/: main.rs
src/: _graphic.css  _menus.css  _settings.css  _styles.css  _welcome-page.css  dialogs.css  index.html
src/Highlights/: LightUI.css  default.css
src/Javascript/: API.js  _config.js  _controlBar.js  _languages.js  _menus.js  _plugins.js  _settings.js  _themes.js  _time_spent.js  _updater.js  _welcome-page.js  dictionary.js  scripts.js
src/app/: cli.ts  debug_window.ts  default_config.ts  main.ts  menus_handler.ts  plugins_handler.ts  preload.ts  store_handler.ts  terminal_handler.ts  window.ts  window_handler.ts
src/css/: _dialogs_&_notifications.css  _graphic.css  _menus.css  _plugins.css  _settings.css  _styles.css  _welcome-page.css  adapted_cm.css  components.css  custom_cm.css  dialogs_&_notifications.css  fast_loading.css  initial.css  menus.css  plugins.css  settings.css  styles.css  styling.css  styling.css.map  welcome-page.css
src/highlightings/: LightUI.css  default.css
src/interface/: main.ts
src/javascript/: API.js  configuration.js  customization.js  dictionary.js  events.js  icons.js  languages.js  main.js  main.ts  market.js  mousetrap.min.js  plugins.js  scripts.js  settings.js  templates.js  top_bar.js  updater.js  welcome.js
src/js/: API.js  _config.js  _controlBar.js  _languages.js  _menus.js  _plugins.js  _settings.js  _themes.js  _updater.js  _welcome-page.js  dictionary.js  scripts.js
src/lib/: codemirror.css  codemirror.js
src/mode/: index.html  meta.js
src/sass/: animations.scss  arctic.theme.scss  codemirror.reset.scss  (+5 more)
test/: browser_tests.js  electron_tests.js  main.js  test.config.json  test.js  test.tsconfig.json  test_browser.config.json
themes/: Dark Accented.json  Light Accented.json  Light UI.json  Mix.json  artic.json  dark.json  default.json  greendark.json  light.json
web/: .eslintrc  index.html  jest.config.js  package-lock.json  package.json  readme.md  tsconfig.json  vite.config.ts
web_components/: package.json  tsconfig.json  vite.config.ts
(+1075 files in other folders)
