[package]
name = "graviton_core"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE.md"

[dependencies]
jsonrpc-derive = "18.0.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
serde_derive = "1.0.126"
serde = { version = "1.0.127", features = ["derive"] }
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"]}
jsonrpc-http-server = "18.0.0"
warp = "0.3.1"
jsonwebtoken = "7.2.0"
home = "0.5.3"