[package]
name = "gveditor-core"
version = "0.1.5"
description = "Graviton Core"
authors = ["Marc Espín Sanz"]
edition = "2021"
readme = "../readme.md"
repository = "https://github.com/Graviton-Code-Editor/Graviton-App/tree/main"
homepage = "https://github.com/Graviton-Code-Editor/Graviton-App/tree/main"
license = "MIT"

[dependencies]
jsonrpc-derive = "18.0.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
serde_derive = "1.0.126"
serde = { version = "1.0.127", features = ["derive"] }
tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros", "sync"]}
jsonrpc-http-server = "18.0.0"
jsonwebtoken = "7.2.0"
home = "0.5.3"
gveditor-core-api = { version = "0.1.5", path = "../core_api"}
async-trait = "0.1.52"
hyper-tungstenite = "0.5.0"
url = "2.2.2"
tracing = "0.1.29"