[package]
name = "gveditor-core"
version = "0.1.6"
description = "Graviton Core"
authors = ["Marc Espín Sanz"]
edition = "2021"
readme = "../readme.md"
repository = "https://github.com/Graviton-Code-Editor/Graviton-App/tree/main"
homepage = "https://github.com/Graviton-Code-Editor/Graviton-App/tree/main"
license = "MIT"

[features]
local_client = []
http_client = ["jsonrpc-http-server", "hyper-tungstenite", "url"]

[dependencies]
jsonrpc-derive = "18.0.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.18.2", features = ["sync"]}
tracing = "0.1.31"
gveditor-core-api = { version = "0.1.6", path = "../core_api"}
async-trait = "0.1.52"
# http client
jsonrpc-http-server = { version = "18.0.0", optional = true}
hyper-tungstenite = { version = "0.5.0", optional = true}
url = { version = "2.2.2", optional = true}
