[package]
name = "gveditor-core-api"
version = "0.1.6"
description = "Graviton Core API"
authors = ["Marc Espín Sanz"]
edition = "2021"
readme = "../readme.md"
repository = "https://github.com/Graviton-Code-Editor/Graviton-App/tree/main"
homepage = "https://github.com/Graviton-Code-Editor/Graviton-App/tree/main"
license = "MIT"

[dependencies]
tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros", "sync", "time"]}
serde_derive = "1.0.126"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.75"
async-trait = "0.1.52"
tracing = "0.1.29"
toml = "0.5.8"