[package]
name = "gveditor-core-api"
version = "0.1.7"
description = "Graviton Core API"
authors = ["Marc Espín Sanz"]
edition = "2021"
readme = "../readme.md"
repository = "https://github.com/Graviton-Code-Editor/Graviton-App/tree/main"
homepage = "https://github.com/Graviton-Code-Editor/Graviton-App/tree/main"
license = "MIT"

[dependencies]
tokio = { version = "1.18.0", features = ["sync"]}
tokio-stream = { version = "0.1.8", features = ["fs"]}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
async-trait = "0.1.52"
tracing = "0.1.31"
toml = "0.5.8"