[package]
name = "gveditor-core-deno"
version = "0.1.1"
description = "Deno Runtime for Core extensions"
authors = ["Marc Espín Sanz"]
edition = "2021"
readme = "../readme.md"
repository = "https://github.com/Graviton-Code-Editor/Graviton-App/tree/main"
homepage = "https://github.com/Graviton-Code-Editor/Graviton-App/tree/main"
license = "MIT"

[dependencies]
gveditor-core-api  = { path = "../core_api"}
deno_core = "0.134.0"
deno_runtime = "0.60.0"
tokio = { version = "1.17.0", features = ["sync"]}
tokio-stream = { version = "0.1.8", features = ["fs"]}
serde = { version = "1.0.136", features = ["derive"] }
async-trait = "0.1.52"
tracing = "0.1.31"
uuid = "1.0.0"