[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Marc Espín Sanz"]
readme = "../readme.md"
repository = "https://github.com/Graviton-Code-Editor/Graviton-App/tree/main"
homepage = "https://github.com/Graviton-Code-Editor/Graviton-App/tree/main"
license = "MIT"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
gveditor-core = { path = "../core"}
gveditor-core-api  = { path = "../core_api"}
git-for-graviton = { path = "../extensions/git"}