[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Marc Espín Sanz"]
readme = "../readme.md"
repository = "https://github.com/Graviton-Code-Editor/Graviton-App/tree/main"
homepage = "https://github.com/Graviton-Code-Editor/Graviton-App/tree/main"
license = "MIT"

[dependencies]
tracing = "0.1.31"
tracing-subscriber = {version="0.3.9", features= ["env-filter", "std"] }
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
gveditor-core = { path = "../core", features = ["http_client"]}
gveditor-core-api  = { path = "../core_api"}
git-for-graviton = { path = "../extensions/git"}