[package]
name = "git-for-graviton"
version = "0.1.0"
edition = "2021"
authors = ["Marc Espín Sanz"]
readme = "../readme.md"
repository = "https://github.com/Graviton-Code-Editor/Graviton-App/tree/main"
homepage = "https://github.com/Graviton-Code-Editor/Graviton-App/tree/main"
license = "MIT"

[dependencies]
gveditor-core-api  = { path = "../../core_api"}
git2 = "0.13.25"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }